# HPCkernelLabs

./: .gitignore  .gitmodules  README.md
level1/1_Square_matrix_multiplication_/: 1_Square_matrix_multiplication_.py
level1/1_Square_matrix_multiplication_/cpu/: CMakeLists.txt  build.sh  experiment_summary.md  naive.cpp  perf_figure.py  record.md  roofline  roofline.cpp  roofline.py  triton_cpu.py  tvm_cpu.py
level1/1_Square_matrix_multiplication_/cpu/docs/: microkernel_tips.md  perf.md  record.md
level1/1_Square_matrix_multiplication_/cpu/scripts/: perf_figure.py  roofline.py  triton_cpu.py
level1/1_Square_matrix_multiplication_/cpu/src/: microkernel.cpp
level1/1_Square_matrix_multiplication_/gpu/: CMakeLists.txt  build.sh  naive.cu  ncu-autho.conf  record.md
level1/1_Square_matrix_multiplication_/gpu/docs/: ncu.md  record.md
level1/1_Square_matrix_multiplication_/gpu/scripts/: tilelang.py  triton_gpu.py  tvm_gpu.py
level1/1_Square_matrix_multiplication_/gpu/src/: ncu_lab.cu
level1/2_Standard_matrix_multiplication_/: 2_Standard_matrix_multiplication_.py
level1/2_Standard_matrix_multiplication_/cpu/scripts/: naive_cpu_experiment.py
level1/2_Standard_matrix_multiplication_/gpu/scripts/: naive_gpu_experiment.py
tools/: cpu_perf_analyzer.py  ncu_analyzer.py  torchProfiler.py
tools/benchmark_cpu/: CMakeLists.txt  benchmark.hpp  build.sh  example.cpp
